--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -6,7 +6,7 @@
     background: var(--light-color);
   }
 
-  .no-snippets-msg {
+  .no-articles-msg {
     margin-top: 2rem;
     color: var(--text-light-color);
     font-weight: bold;
