add security access level

--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -4,11 +4,14 @@
   --dark-color: #d1d1d1;
   --danger-color: #c71a1a;
   --danger-light-color: #f5b2b2;
+  --success-color: #009013;
+  --success-light-color: #7bda6f;
 
   --text-dark-color: #626262;
   --text-light-color: #ffffff;
   --text-link-color: #2557fa;
   --text-danger-color: #a81515;
+  --text-success-color: #007706;
 
   --box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
